# ros_perception_yolov5

./: README.md
object_detection_ros/: CMakeLists.txt  package.xml
object_detection_ros/launch/: object_detection.launch
object_detection_ros/src/: object_detection_node.cpp
